# gabby

./: .gitignore  Cargo.toml  firmware.txt  gabby.ino  main.py  pins.txt  sender.py  typewriterEprom
receiver/: gabby.ino  pins.txt
receiver/src/: main.cpp
sender/: keys.txt  keys1.txt  pyproject.toml
sender/src/: main.rs
sender/src/gabby/: main.py
src/: command.rs  main.rs  typewriter.rs
src/gabby/: main.py
