[project]
name = "gabby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Imogen", email = "me@imogen.tech" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
gabby = "gabby:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "C4",
    "DTZ",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "SLOT",
    "SIM",
    "PTH",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["TRY003", "PIE790", "FBT001", "B027", "FBT003", "RUF001"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "standard"
disableBytesTypePromotions = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
deprecateTypingAliases = true
enableExperimentalFeatures = true
reportAssertAlwaysTrue = "information"
reportUnusedExpression = "information"
reportConstantRedefinition = "warning"
reportDeprecated = "information"
reportDuplicateImport = "information"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnusedCoroutine = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportCallInDefaultInitializer = "none"
reportImportCycles = "warning"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
reportUninitializedInstanceVariable = "warning"
reportFunctionMemberAccess = "warning"
reportOverlappingOverload = "warning"
